--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipe</h1>
-    <a href="./recipes/lasagna.html">LASAGNA</a>
-    <img src="../odin-recipes/recipes/lasagna.webp">
+    <ul>
+    
+        <li><a href="./recipes/lasagna.html">LASAGNA</a></li>
+        <li><a href="./recipes/pizza.html">PIZZA</a></li>
+        <li><a href="./recipes/cheese.html">CHEESE</a></li>
+    </ul>
 </body>
 </html>
